--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     </style>
 </head>
 <body>
+    <div class="wrapper">
+    <header class="header">
+        <div class="top-header"></div>
+        <div class="main-header"></div>
+    </header>
+    <header></header>
     <header></header>
     <main>
         <section></section>
@@ -29,7 +35,8 @@
         <section></section>
         <section></section>
     </main>
-    <footer></footer>
+    <footer></footer>       
+</div>
 </body>
 <script src="./app.js"></script>
 </html>
