--- a/index.html
+++ b/index.html
@@ -76,12 +76,30 @@
     </header>
     <header class="w-[1421px] m-auto"></header>
     <main>
+        <section class="w-[1421px] m-auto mt-[52px]">
+          <div class=" flex">
+            <div class="w-[697px] h-[670px]" style="background-image: url(./img/цветокpng.png);"></div>
+            <div class="ml-[31px] w-[747px] h-[670px] flex flex-wrap gap-[32px]">
+              <div class="w-[336px] h-[321px]" style="background-image: url(./img/цветок2png.png);"></div>
+              <div class="w-[336px] h-[321px]" style="background-image: url(./img/цветок3png.png);"></div>
+              <div class="w-[336px] h-[321px]" style="background-image: url(./img/цветок4png.png);"></div>
+              <div class="w-[336px] h-[321px]" style="background-image: url(./img/цветок5png.png);"></div>
+            </div>
+          </div>
+        </section>
         <section></section>
         <section></section>
         <section></section>
         <section></section>
-        <section></section>
-        <section></section>
+        <section class="w-[1420px] h-[1000px] relative mx-auto mt-[100px]">
+          <div class="overflow-hidden h-full">
+            <div id="carousel" class="flex transition-transform duration-500 w-[378px] gap-[111px] relative mt-[240px]">
+                <!-- Carousel items will be injected here -->
+            </div>
+            <button id="prev" class="absolute left-0 top-1/2 transform -translate-y-1/2 px-4 py-2 bg-gray-800 text-white">&lt;</button>
+            <button id="next" class="absolute right-0 top-1/2 transform -translate-y-1/2 px-4 py-2 bg-gray-800 text-white">&gt;</button>
+        </div>    
+        </section>
         <section></section>
         <section></section>
         <section></section>
