--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <section></section>
         <section></section>
         <section>
-            <div class="wrapper">
+            <div class="section">
                 <div class="section">
                     <div class='w-[100%] h-[40px] text-center'><h1 class="text-[50px] font-bold">Акции</h1></div>
                 <div id="card" class="flex flex-wrap  items-center gap-[20px] gap-y-[11px] pt-[86px]">
@@ -178,7 +178,7 @@
             </div>
         </section>
         <section>
-            <div class="wrapper">
+            <div class="section">
                 <div class="section">
                     <div class='w-[100%] h-[40px] text-center'><h1 class="text-[50px] font-bold">Сезонные</h1></div>
                 <div id="cardTwo" class="flex flex-wrap  items-center gap-[20px] gap-y-[11px] pt-[86px]">
@@ -188,7 +188,7 @@
             </div>
         </section>
         <section>
-            <div class="wrapper">
+            <div class="section">
                 <div class="section">
                     <div class='w-[100%] h-[40px] text-center'><h1 class="text-[50px] font-bold">Подарки</h1></div>
                 <div id="cardTree" class="flex flex-wrap  items-center gap-[20px] gap-y-[11px] pt-[86px]">
