--- a/index.html
+++ b/index.html
@@ -15,50 +15,19 @@
 </head>
 <body>
     <div class="wrapper">
-         <header class="w-[1421px] bg-[#333333]  m-auto">
-    <header class="header w-[1421px] m-auto ">
-        <div class="top-header"></div>
-        <div class="main-header"></div>
-    </header>
-    <header class="header">
-        <div class="flex  justify-center items-center m-auto mt-[10px]">
-            <img src="./img/image 11.png" alt="" width="117px" height="120px" class="mt-[-50px] ml-[60px]">
-            <div class="flex flex-wrap justify-between pl-[114px]">
-            <div class="flex w-[1250px] gap-[50px] mt-[-30px]">
-                <input type="text" placeholder="Поиск по категориям" class="w-[219px] h-[26px] border-b-[1px] border-[#956D84]">
-                <input type="search" placeholder="Поиск по товарам" class="w-[580px] h-[26px] border-b-[1px] border-[#956D84]">
-                <div class="ml-[128px]">
-                    <div class="flex gap-[15px]">
-                    <img src="./img/Group 18.svg" alt="">
-                    <img src="./img/Group 15.svg" alt="">
-                    <div class="w-[26.92px] h-[26.92px] rounded-[50%] bg-[#956D84] flex justify-center items-center">
-                        <img src="./img/telegram (3) 1 (1).svg" alt="" >
-                    </div>
-                    <img src="./img/Group 17.svg" alt="">
-                </div>
-                    <ul class="text-[#333333] font-[300] text-[17px] mt-[14px]">
-                        <li>+38 (067) 829 30 30</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="w-[1250px] flex " >
-                <ul class="flex justify-between items-center text-[17px] font-bold text-center gap-[71px]">
-                    <li class="text-[#956D84]">Каталог товаров</li>
-                    <li>Форум</li>
-                    <li>Отзывы</li>
-                    <li>Акции</li>
-                    <li>Новости</li>
-                    <li>Информация</li>
-                </ul>
-                <div class="flex gap-[10px] ml-[180px] items-center mt-[10px]">
-                    <img src="./img/Frame 3.svg" alt="">
-                    <img src="./img/Frame 290.svg" alt="">
-                    <ul class="text-[17px] text-[#828282] font-[200] "><li>₴ 1 520</li></ul>
-                </div>
-            </div>
-            </div>
-        </div>
-    </header>
+      <img src="./img/flower2.svg" alt="" class="absolute top-[750px] left-[0px]">
+      <img src="./img/flower2.svg" alt="" class="absolute top-[1690px] left-[0px]">
+      <img src="./img/flower2.svg" alt="" class="absolute top-[2580px] left-[0px]">
+      <img src="./img/flower2.svg" alt="" class="absolute top-[3560px] left-[0px]">
+      <img src="./img/flower2.svg" alt="" class="absolute top-[4490px] left-[0px]">
+      <img src="./img/flower2.svg" alt="" class="absolute top-[5390px] left-[0px]">
+      <!--  -->
+      <img src="./img/flower1.svg" alt="" class="absolute top-[300px] right-[0px]">
+      <img src="./img/flower1.svg" alt="" class="absolute top-[1180px] right-[0px]">
+      <img src="./img/flower1.svg" alt="" class="absolute top-[2100px] right-[0px]">
+      <img src="./img/flower1.svg" alt="" class="absolute top-[3020px] right-[0px]">
+      <img src="./img/flower1.svg" alt="" class="absolute top-[4000px] right-[0px]">
+      <img src="./img/flower1.svg" alt="" class="absolute top-[4930px] right-[0px]">
     <header class="w-[1421px] bg-[#333333]  m-auto">
       <div class=" flex items-center justify-around  text-gray-300 py-3 px-6">
         <div class="flex space-x-4">
@@ -168,7 +137,7 @@
         <section></section>
         <section></section>
         <section>
-            <div class="section">
+            <div class="wrapper">
                 <div class="section">
                     <div class='w-[100%] h-[40px] text-center'><h1 class="text-[50px] font-bold">Акции</h1></div>
                 <div id="card" class="flex flex-wrap  items-center gap-[20px] gap-y-[11px] pt-[86px]">
@@ -178,7 +147,7 @@
             </div>
         </section>
         <section>
-            <div class="section">
+            <div class="wrapper">
                 <div class="section">
                     <div class='w-[100%] h-[40px] text-center'><h1 class="text-[50px] font-bold">Сезонные</h1></div>
                 <div id="cardTwo" class="flex flex-wrap  items-center gap-[20px] gap-y-[11px] pt-[86px]">
@@ -188,7 +157,7 @@
             </div>
         </section>
         <section>
-            <div class="section">
+            <div class="wrapper">
                 <div class="section">
                     <div class='w-[100%] h-[40px] text-center'><h1 class="text-[50px] font-bold">Подарки</h1></div>
                 <div id="cardTree" class="flex flex-wrap  items-center gap-[20px] gap-y-[11px] pt-[86px]">
@@ -209,14 +178,46 @@
             <button id="next" class="absolute right-0 top-1/2 transform -translate-y-1/2 px-4 py-2 bg-gray-800 text-white">&gt;</button>
         </div>    
         </section>
-        <section></section>
+        <section>
+          <div class="map-container">
+            <div class="item-block">
+              <div class="triangle-right"></div>
+              <div class="triangle-left"></div>  
+              <div class="justify-center items-center pl-[75px] pt-[20px]">
+                <div class="ml-[60px]">
+                  <img src="./img/image 27.svg" alt="">
+                </div>
+                <div>
+                  <ul class="text-[17px] leading-[31px] font-normal  text-[#828282] mt-[42px]">
+                    <li class="flex items-center gap-[10px]"> <div><img src="./img/Vector.png" alt=""></div> Телефон:</li>
+                    <li>+38 (063) 829 30 30</li>
+                    <li>+38 (067) 829 30 30</li>
+                    <li class="flex items-center gap-[10px] mt-[10px]"><div><img src="./img/skype (1) 1.png" alt=""> </div> Skype</li>
+                    <li>Flowers-Ukraine</li>
+                    <li class="flex items-center gap-[10px] mt-[10px]"><div><img src="./img/Frame 38.svg" alt=""></div> Почта</li>
+                    <li>flowers.ukraine2014@gmail.com</li>
+                  </ul>
+                </div>
+              <div class="flex gap-[21px] mt-[42px]">
+                <img src="./img/Group 16 (1).png" alt="">
+                <img src="./img/Group 15 (1).png" alt="">
+                <div class="w-[34px] h-[34px] rounded-[50%] flex justify-center items-center bg-[#956D84]"><img src="./img/facebook 1.svg" alt=""></div>
+              </div>      
+              </div>      
+            </div>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.8354345093675!2d144.9537363155045!3d-37.81720997975157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0xf5771b2d7d1b7b34!2sVictoria%20State%20Library!5e0!3m2!1sen!2sau!4v1633594372423!5m2!1sen!2sau"
+                allowfullscreen="" loading="lazy"></iframe>
+        </div>
+        </section>
         <section></section>
         <section></section>
         <section></section>
         <section></section>
         <section></section>
     </main>
-    <footer></footer>       
+    <footer>
+    </footer>       
 </div>
 </body>
 <script src="./app.js"></script>
