--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <img src="./img/flower2.svg" alt="" class="absolute top-[3560px] left-[0px]">
       <img src="./img/flower2.svg" alt="" class="absolute top-[4490px] left-[0px]">
       <img src="./img/flower2.svg" alt="" class="absolute top-[5390px] left-[0px]">
+      <img src="./img/Group 1197.svg" alt="" class="absolute top-[6283px] left-[0px]">
       <!--  -->
       <img src="./img/flower1.svg" alt="" class="absolute top-[300px] right-[0px]">
       <img src="./img/flower1.svg" alt="" class="absolute top-[1180px] right-[0px]">
@@ -28,6 +29,7 @@
       <img src="./img/flower1.svg" alt="" class="absolute top-[3020px] right-[0px]">
       <img src="./img/flower1.svg" alt="" class="absolute top-[4000px] right-[0px]">
       <img src="./img/flower1.svg" alt="" class="absolute top-[4930px] right-[0px]">
+      <img src="./img/Group 1199.svg" alt="" class="absolute top-[6275px] right-[0px]">
     <header class="w-[1421px] bg-[#333333]  m-auto">
       <div class=" flex items-center justify-around  text-gray-300 py-3 px-6">
         <div class="flex space-x-4">
@@ -216,9 +218,64 @@
         <section></section>
         <section></section>
     </main>
-    <footer>
+  </div>
+    <footer class="footer">
+      <div class="flex w-[1420px] h-[240px] justify-between items-center bg-[#333333] m-auto">
+        <div>
+          <img src="./img/Group 1137.png" alt="">
+        </div>
+        <div class="w-[224px] h-[164px]">
+          <h1 class="font-bold text-[18px] leading-[19px] text-white">ИНФОРМАЦИЯ</h1>
+          <ul class="text-[16px] font-[300] text-[] leading-[43px] mt-[30px] text-white">
+            <li>О НАС</li>
+            <li>ДОСТАВКА И ОПЛАТА</li>
+            <li class="leading-[18px]">ПОЛИТИКА КОНФИДЕНЦИАЛЬНОСТИ</li>
+          </ul>
+        </div>
+        <div class="w-[208px] h-[182px]">
+          <h1 class="font-bold text-[18px] leading-[19px] text-white">СЛУЖБА ПОДДЕРЖКИ</h1>
+          <ul class="text-[16px] font-[300] text-[] leading-[43px] mt-[30px] text-white">
+            <li>КАРТА САЙТА</li>
+            <li>ВОЗВРАТ ТОВАРА</li>
+            <li>СВЯЗАТЬСЯ С НАМИ</li>
+            <Li>ДЛЯ СОТРУДНИЧЕСТВА</Li>
+          </ul>
+        </div>
+        <div class="w-[176px] h-[179px]">
+          <h1 class="font-bold text-[18px] leading-[19px] text-white">ЛИЧНЫЙ КАБИНЕТ</h1>
+          <ul class="text-[16px] font-[300] text-[] leading-[43px] mt-[30px] text-white">
+            <li>ЛИЧНЫЙ КАБИНЕТ</li>
+            <li>ИСТОРИЯ ЗАКАЗА</li>
+            <li>ЗАКЛАДКИ</li>
+            <li>СПИСОК НОВОСТЕЙ</li>
+          </ul>
+        </div>
+        <div class="w-[174px] h-[178px]">
+          <h1 class="font-bold text-[18px] leading-[19px] text-white">ДОПОЛНИТЕЛЬНО</h1>
+          <ul class="text-[16px] font-[300] text-[] leading-[43px] mt-[30px] text-white">
+            <li>ПОДАРОЧНЫЕ </li>
+            <li>СЕРТИФИКАТЫ</li>
+            <li>АКЦИИ</li>
+            <li>ЦВЕТЫ В ОФИС</li>
+          </ul>
+        </div>
+      </div>
+      <div class="w-[1420px] border-[2px] border-[#956D84] mt-[37px] m-auto"></div>/
+      <div class="w-[1420px] m-auto h-[35px] justify-between items-center flex">
+        <div>
+          <h3 class="text-[16px] font-[200] text-white">Copyright © 2021. Все права защищены</h3>
+        </div>
+        <div class="w-[650px] h-[35px] justify-between items-center flex">
+<h3 class="text-[16px] font-[200] text-white">Способы оплаты:</h3>
+<div><img src="./img/image 52.png" alt=""></div>
+<div><img src="./img/image 53.svg" alt=""></div>
+<div><img src="./img/image 35.svg" alt=""></div>
+<div><img src="./img/Rectangle 19 (1).svg" alt=""></div>
+<div><img src="./img/image 36.svg" alt=""></div>
+<div><img src="./img/image 37.svg" alt=""></div>
+        </div>
+      </div>
     </footer>       
-</div>
 </body>
 <script src="./app.js"></script>
 </html>
