--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
             <img src="./img/image 11.png" alt="" width="117px" height="120px" class="mt-[-50px] ml-[60px]">
             <div class="flex flex-wrap justify-between pl-[114px]">
             <div class="flex w-[1250px] gap-[50px] mt-[-30px]">
-                <input type="text" placeholder="Поиск по категориям" class="w-[219px] h-[26px] border-b-[1px] border-[#956D84]">
-                <input type="search" placeholder="Поиск по товарам" class="w-[580px] h-[26px] border-b-[1px] border-[#956D84]">
+                <input type="text" placeholder="Поиск по категориям" class="w-[219px] h-[26px] border-b-[1px] border-[#956D84] outline-none">
+                <input type="search" placeholder="Поиск по товарам" class="w-[580px] h-[26px] border-b-[1px] border-[#956D84] outline-none">
                 <div class="ml-[128px]">
                     <div class="flex gap-[15px]">
                     <img src="./img/Group 18.svg" alt="">
@@ -107,9 +107,9 @@
                 </div>
             </div>
             <div class="w-[1250px] flex " >
-                <ul class="flex justify-between items-center text-[17px] font-bold text-center gap-[71px]">
+                <ul class="flex justify-between items-center text-[17px] font-bold text-center gap-[71px] cursor-pointer">
                     <li class="text-[#956D84]">Каталог товаров</li>
-                    <li>Форум</li>
+                    <li class="hover:text-[#333333]">Форум</li>
                     <li>Отзывы</li>
                     <li>Акции</li>
                     <li>Новости</li>
